# pileup_ml

./: README.md  main.py  pyproject.toml
notebooks/: eda_pixels.ipynb
src/pileup_ml/: dataset.py  events.py  plots.py  utils.py
src/pileup_ml/detectors/: pixels.py
src/pileup_ml/visualization/: pixels.py
