[project]
name = "pileup-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py>=3.13.0",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.2.3",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "tensorboard>=2.20.0",
    "tensorboard-plugin-profile>=2.20.6",
    "torch>=2.8.0",
    "torch-cluster>=1.6.3",
    "torch-geometric>=2.6.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.23.0",
    "uproot>=5.6.2",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
# TODO: fix this hardcoded dependency
torch-cluster = { url = "https://data.pyg.org/whl/torch-2.8.0%2Bcu128/torch_cluster-1.6.3%2Bpt28cu128-cp312-cp312-linux_x86_64.whl" }

[tool.uv]
package = true

[[tool.uv.index]]
# Default: PyPI for everything
url = "https://pypi.org/simple"

# Extra index for PyTorch wheels
[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Extra index for PyG wheels (torch-cluster, etc.)
[[tool.uv.index]]
name = "pyg-cu128"
url = "https://data.pyg.org/whl/torch-2.8.0+cu128"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["pileup_ml"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
